fix collapse state changing causing menu wibbles

--- a/themes/default/resources/css/style.css
+++ b/themes/default/resources/css/style.css
@@ -78,6 +78,8 @@ body {
 }
 
 .sidebar-heading .collapse_state {
+  font-family: monospace;
+  font-size: 12px;
   padding-right: 10px;
 }
 
